# ThermalFold

./: .gitignore  README.md  environment.yml  init_thermalfold.py  pyproject.toml
Datasets/annealingMD/: MD_data_info.json  cluster_dic.json  uniprotid_species.csv
Datasets/static/: static_data_info.json
example/: TF_prediction.ipynb
example/seqs/: examples_1.csv  examples_2.csv  examples_3.csv  examples_4.csv
src/ThermalFold/: __init__.py  data_utils.py  esm_utils.py  predict_utils.py
src/ThermalFold/alphafold3_pytorch/: __init__.py  cli.py
src/ThermalFold/alphafold3_pytorch/common/: amino_acid_constants.py  biomolecule.py  dna_constants.py  ligand_constants.py  mmcif_metadata.py  rna_constants.py
src/ThermalFold/alphafold3_pytorch/data/: data_pipeline.py  kalign.py  life.py  mmcif_parsing.py  mmcif_writing.py  msa_pairing.py  msa_parsing.py  pdb_datamodule.py  template_parsing.py  weighted_pdb_sampler.py
src/ThermalFold/alphafold3_pytorch/models/: alphafold3_module.py
src/ThermalFold/alphafold3_pytorch/models/components/: alphafold3.py  attention.py  inputs.py  nlm.py  plm.py  stage-v2-2-alphafold3.py
src/ThermalFold/alphafold3_pytorch/utils/: __init__.py  data_utils.py  instantiators.py  logging_utils.py  model_utils.py  rich_utils.py  tensor_typing.py  utils.py
src/ThermalFold/model/: RMSFpredictor.py  thermalfold_alphafold3.py
src/ThermalFold/model/RMSFpredictor_weight/: last.pt
weight/: model_conf.yaml
